<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".User.UserDashboard"

    android:id="@+id/drawer_layout">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightWhite"
        android:theme="@style/navigationTheme"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu"/>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/home_bakground">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="20dp">

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="451dp"
                android:src="@drawable/menu_icon" />

        </RelativeLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="76dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical">-->

<!--            <RelativeLayout-->
<!--                android:layout_width="70dp"-->
<!--                android:layout_height="45dp"-->
<!--                android:layout_margin="10dp"-->
<!--                android:background="@drawable/card_1"-->
<!--                android:elevation="8dp">-->

<!--                <Button-->
<!--                    android:id="@+id/map_id"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:background="@color/colorbule"-->
<!--                    android:onClick="mappage"-->
<!--                    android:padding="10dp"-->
<!--                    android:text="Map"-->
<!--                    android:visibility="visible"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent"-->


<!--                    />-->


<!--            </RelativeLayout>-->
<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:layout_width="67dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical">-->

<!--            <RelativeLayout-->
<!--                android:layout_width="60dp"-->
<!--                android:layout_height="45dp"-->
<!--                android:layout_margin="10dp"-->
<!--                android:background="@drawable/card_2"-->
<!--                android:elevation="8dp">-->

<!--                <Button-->
<!--                    android:id="@+id/mytourplan_btn"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:background="@color/colorbule"-->
<!--                    android:onClick="tourplan"-->
<!--                    android:padding="12dp"-->
<!--                    android:text="Tour"-->
<!--                    android:visibility="visible"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent"-->


<!--                    />-->


<!--            </RelativeLayout>-->

<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical">-->

<!--            <RelativeLayout-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="45dp"-->
<!--                android:layout_margin="10dp"-->
<!--                android:background="@drawable/card_3"-->
<!--                android:elevation="8dp">-->

<!--                <Button-->

<!--                    android:id="@+id/MyLocation_btn"-->
<!--                    android:layout_width="71dp"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:background="@color/colorbule"-->
<!--                    android:onClick="mylocation"-->
<!--                    android:padding="2dp"-->
<!--                    android:text="MyLocation"-->
<!--                    android:visibility="visible"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent"-->


<!--                    />-->


<!--            </RelativeLayout>-->

<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical">-->

<!--            <RelativeLayout-->
<!--                android:layout_width="71dp"-->
<!--                android:layout_height="45dp"-->
<!--                android:layout_margin="10dp"-->
<!--                android:background="@drawable/card_4"-->
<!--                android:elevation="8dp">-->

<!--                <Button-->

<!--                    android:id="@+id/reminder_btn"-->
<!--                    android:layout_width="78dp"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:background="@color/colorbule"-->
<!--                    android:onClick="reminder"-->
<!--                    android:padding="12dp"-->
<!--                    android:text="Reminder"-->
<!--                    android:visibility="visible"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent"-->


<!--                    />-->


<!--            </RelativeLayout>-->

<!--        </LinearLayout>-->



    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logo_name"
                    android:textSize="28sp"
                    android:fontFamily="sans-serif-black"
                    android:layout_centerHorizontal="true"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/app_name"
                    android:background="@color/white"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:elevation="8dp">


                    <EditText
                        android:id="@+id/mainSearch"
                        android:layout_width="241dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="55dp"
                        android:layout_marginRight="55dp"
                        android:layout_marginBottom="0dp" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/search_icon"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"/>


                </RelativeLayout>


            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/card_1"
                        android:elevation="8dp"
                        android:layout_margin="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:src="@drawable/restaurant_icon" />


                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/restaurants"
                        android:gravity="center_horizontal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/card_2"
                        android:elevation="8dp"
                        android:layout_margin="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:src="@drawable/bank_icon" />


                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/hotels"
                        android:gravity="center_horizontal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/card_3"
                        android:elevation="8dp"
                        android:layout_margin="10dp">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/school_icon"
                            android:layout_centerInParent="true"/>


                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="Education"
                        android:gravity="center_horizontal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/card_4"
                        android:elevation="8dp"
                        android:layout_margin="10dp">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/shop_icon"
                            android:layout_centerInParent="true"/>


                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/shops"
                        android:gravity="center_horizontal" />

                </LinearLayout>



            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:background="@color/banner_background_light">

                <LinearLayout
                    android:id="@+id/featured_background"
                    android:layout_width="130dp"
                    android:layout_height="282dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/banner_bacground"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="50dp"
                        android:text="@string/featured_location"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="25dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/featured_location_description" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/featured_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="-17dp"
                    android:layout_marginTop="0dp"
                    android:layout_toRightOf="@id/featured_background"
                    android:background="@color/home_bakground" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/most_viewed_location"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:fontFamily="sans-serif-black"
                        android:textAllCaps="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/view_all" />



                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/most_recycler"
                    android:layout_width="386dp"
                    android:layout_height="173dp" />

            </LinearLayout>
            <!--
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/categories"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:fontFamily="sans-serif-black"
                        android:textAllCaps="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_all"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>



                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categories_recycler"
                    android:layout_width="386dp"
                    android:layout_height="173dp" />

            </LinearLayout>
            -->



        </LinearLayout>


    </ScrollView>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>